# expense-checker

./: .gitignore  amplify.yml  healthcheck.txt  next.config.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json
app/add-policy/: page.tsx
app/expenses/: page.tsx
patches/: @chroma-core+default-embed+0.1.9.patch
src/app/: layout.tsx  page.tsx
src/app/add-expense/: AddExpensePage.tsx  page.tsx
src/app/add-policy/: UploadPolicy.tsx  page.tsx
src/app/api/analyze-expense/: AnalyzeExpense.ts  route.ts
src/app/api/batch-analyze/: route.ts
src/app/api/ingest-policy/: route.ts
src/app/api/list-policies/: ListPolicies.ts  route.ts
src/app/api/parse-receipt/: ParseReceipt.ts  route.ts
src/app/api/prompts/: Prompts.ts  route.ts
src/app/api/save-expense/: SaveExpense.ts  route.ts
src/app/api/upload-policy/: route.ts  (+1 more)
src/app/architecture/: page.tsx
src/app/completed/: page.tsx
src/app/components/: Header.tsx  UserContext.tsx
src/app/expenses/: ExpandableAnalysis.tsx  GetExpenses.tsx  page.tsx
src/app/manual-review/: ManualReviewPage.tsx  page.tsx
src/app/policies/: PolicyViewer.tsx  page.tsx
src/app/review/: ReviewPage.tsx  page.tsx
src/app/update-prompts/: UpdatePromptsPage.tsx  page.tsx
src/lib/: chroma.ts  compliance.ts  db.ts  listPolicies.ts  parseReceipt.ts  prompts.ts  uploadPolicy.ts
src/python/: ingest-policy.py
src/scripts/: chroma_utils.py  compliance.py  ingest-policy.py  list_policies.py  parse_receipt.py  prompts.py  schema.sql  upload-policy.py
src/scripts/data/: example-prompts-doc.txt  policy-demo.txt
(+7 files in other folders)
