[project]
name = "expense-checker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.7",
    "langchain-anthropic>=1.4.4",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.3",
    "langchain-openai>=1.3.0",
    "langchain-text-splitters>=1.1.2",
    "python-dotenv>=1.2.2",
]
